syntax = "proto3";

option csharp_namespace = "EasyOrderProduct.Application.Contracts.Protos";

package inventory;

service InventoryChecker {
  rpc CheckAvailability (InventoryRequest) returns (InventoryResponse);
}

message InventoryRequest {
  int32 productItemId = 1;
}

message InventoryResponse {
  bool   isAvailable = 1;
  string message     = 2;
}
